<package format="3">
  <name>robot_arm_package</name>
  <version>0.0.0</version>
  <description>The robot_arm_package package</description>

  <maintainer email="malak@todo.todo">malak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
